<!-- 
 Copyright 2014 David González Sola (hispalos@gmail.com)
  
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
 
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <ImageView
	    android:id="@+id/titulo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	        android:contentDescription="@string/titulo_arx"
	    android:src="@drawable/titulo" />
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#F0F0F0"
	    android:gravity="center"
	    android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/boton_menu_help"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:gravity="center_horizontal|center_vertical"
	        android:contentDescription="@string/boton_menu_help"
            android:src="@drawable/selector_menu_help"
            android:background="@null"
            android:scaleType="fitXY"/>
	    
	    <ImageButton
	        android:id="@+id/boton_menu_start"
	        android:layout_width="120dp"
	        android:layout_height="120dp"
	        android:gravity="center_horizontal|center_vertical"
	        android:contentDescription="@string/boton_menu_start"
            android:src="@drawable/selector_menu_start"
            android:background="@null"
            android:scaleType="fitXY" />
	    	    
	   <ImageButton
	        android:id="@+id/boton_menu_salir"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:gravity="center_horizontal|center_vertical"
	        android:contentDescription="@string/boton_salir"
            android:src="@drawable/selector_menu_salir"
            android:background="@null"
            android:scaleType="fitXY" />
    </LinearLayout>

</LinearLayout>